# rover_workspace

./: .gitignore  .gitmodules  CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json
src/arm/: README.md
src/arm/arm_bringup/: CMakeLists.txt  README.md  package.xml
src/arm/arm_bringup/launch/: arm_bringup.launch.py
src/arm/arm_description/: CMakeLists.txt  README.md  package.xml
src/arm/arm_description/config/: arm_controllers.yaml
src/arm/arm_description/launch/: arm_sim.launch.py
src/arm/arm_description/rviz/: view_arm.rviz
src/arm/arm_description/urdf/: sliding_arm.urdf  sliding_arm.urdf.xacro
src/arm/arm_gazebo/: CMakeLists.txt  README.md  package.xml
src/arm/arm_gazebo/config/: arm_controllers.yaml
src/arm/arm_gazebo/launch/: arm_gazebo.launch.py
src/arm/arm_gazebo/urdf/: arm_gazebo.urdf.xacro
src/arm/arm_teleop/: CMakeLists.txt  README.md  package.xml
src/arm/arm_teleop/arm_teleop/: gazebo_bridge.py  keyboard_teleop.py  sim_driver.py
src/arm/arm_teleop/config/: teleop_params.yaml
src/arm/arm_teleop/launch/: arm_teleop.launch.py
src/arm/genesis_test/: README.md
src/arm/genesis_test/genesis_arm_bridge/: package.xml  setup.cfg  setup.py
src/arm/genesis_test/genesis_arm_bridge/genesis_arm_bridge/: bridge_node.py
src/arm/genesis_test/genesis_arm_bridge/scripts/: genesis_bridge_venv
src/arm/genesis_test/genesis_arm_bringup/: CMakeLists.txt  package.xml
src/arm/genesis_test/genesis_arm_bringup/config/: arm_params.yaml
src/arm/genesis_test/genesis_arm_bringup/launch/: sim.launch.py  teleop.launch.py
src/arm/genesis_test/genesis_arm_control/: package.xml  setup.cfg  setup.py
src/arm/genesis_test/genesis_arm_control/config/: joint_limits.yaml
src/arm/genesis_test/genesis_arm_control/genesis_arm_control/: controller_node.py  kinematics.py
src/arm/genesis_test/genesis_arm_description/: CMakeLists.txt  package.xml
src/arm/genesis_test/genesis_arm_description/mjcf/: arm.xml
src/arm/genesis_test/genesis_arm_teleop/: package.xml  setup.cfg  setup.py
src/arm/genesis_test/genesis_arm_teleop/genesis_arm_teleop/: keyboard_node.py
src/arm/genesis_test/genesis_arm_teleop/scripts/: keyboard_teleop_venv
src/arm/urdf_viewer/: .gitignore  CMakeLists.txt  README.md  package.xml
src/arm/urdf_viewer/launch/: view_urdf.launch.py
src/arm/urdf_viewer/rviz/: arm_config.rviz
src/arm/urdf_viewer/urdf/: config.json  robot.urdf
src/arm/urdf_viewer/urdf/scripts/: urdf_asset.sh
src/communications/: README.md
src/config/: README.md
src/description/: README.md
src/intefaces/aruco_detection_interfaces/msg/: KeyboardKeys.msg
src/interfaces/: README.md
src/interfaces/aruco_detection_interfaces/: CMakeLists.txt  package.xml
src/interfaces/vision_interfaces/: CMakeLists.txt  README.md  package.xml
src/launch/: README.md
src/navigation/: .gitignore  README.md
src/navigation/rover_description/: CMakeLists.txt  package.xml
src/navigation/rover_description/assets/: corner_bracket_8020.stl  front_plate.stl  middle_bearing_holder_block.stl  part1.stl  part_1__4.stl  part_1__5.stl  part_4.stl  rover_height_extrusion.stl  rover_length_extrusion.stl  rover_width_extrusion.stl  side_plate.stl  top_plate.stl
src/navigation/rover_description/urdf/: robot.urdf
src/navigation/rover_gazebo/: CMakeLists.txt  package.xml
src/navigation/rover_gazebo/config/: rover_controllers.yaml
src/navigation/rover_gazebo/launch/: rover_gazebo.launch.py
src/navigation/rover_gazebo/urdf/: rover_gazebo.urdf.xacro
src/navigation/roverbody_urdf/: robot copy.urdf  robot.urdf
src/urdf_models/rigid_body/: config.json  parse_urdf.py  robot.urdf
src/urdf_models/roverbody_urdf/: config.json  robot.urdf
src/vision/: README.md
src/vision/aruco_detection/: README.md  package.xml  setup.py
src/vision/aruco_detection/aruco_detection/: aruco_generate_marker.py  aruco_node (single cam backup).py  aruco_node copy.py  aruco_node.py  keyboard_detection.py  webcam_publisher.py
src/vision/aruco_detection/config/: aruco_parameters.yaml  aruco_rviz.rviz  realsense_camera.yaml
src/vision/aruco_detection/launch/: aruco_detection.launch.py
src/vision/camera_publisher/: README.md  package.xml  setup.py
src/vision/camera_publisher/camera_publisher/: realsense_publisher.py  usb_camera_publisher.py  webcam_publisher.py
src/vision/camera_publisher/config/calibration/: ardu_camera.yaml
src/vision/camera_publisher/launch/: camera_publisher.launch.py
src/vision/keyboard_detector/: README.md  package.xml  setup.py
src/vision/keyboard_detector/config/: keys.yaml
src/vision/keyboard_detector/keyboard_detector/: keyboard_detection.py  keyboard_visualizer.py
src/vision/keyboard_detector/launch/: keyboard_detector.launch.py
src/vision/lidar_publisher/: README.md  build_livox_driver.sh  package.xml  setup.py
src/vision/lidar_publisher/config/: MID360_config.json  laserscan_params.yaml
src/vision/lidar_publisher/launch/: lidar_publisher.launch.py
src/vision/object_detection/: README.md  package.xml  setup.py
src/vision/object_detection/object_detection/: detector.py
src/vision/vision_bringup/: README.md  package.xml  setup.py
src/vision/vision_bringup/launch/: vision_bringup.launch.py
