<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genesis_arm_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for Genesis arm simulation</description>
  <maintainer email="eric.g4@outlook.com">ericg4</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>genesis_arm_description</exec_depend>
  <exec_depend>genesis_arm_bridge</exec_depend>
  <exec_depend>genesis_arm_control</exec_depend>
  <exec_depend>genesis_arm_teleop</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
